Final version corrected

--- a/Chapter5_Results.tex
+++ b/Chapter5_Results.tex
@@ -33,7 +33,7 @@ In the following, the results obtained from the finite element simulation using 
 		\includegraphics{fig/chap5/initial_model/third_octave_over_height/2000_Hz.png}
 		\caption{\SI{2000}{\hertz}}
 	\end{subfigure}
-        \caption{Comparison between simulation (full line) and measurement (dashed line) over the height at measurement position a (\SI{10}{\centi\meter away from the carbody wall) for various one-third octave bands. A-weighted SPL in dBA ref \SI{20}{\micro\pascal}.}
+        \caption{Comparison between simulation (full line) and measurement (dashed line) over the height at measurement position a (\SI{10}{\centi\meter} away from the carbody wall) for various one-third octave bands. A-weighted SPL in dBA ref \SI{20}{\micro\pascal}.}
 	\label{fig:third_octave_over_height}
 \end{figure}
 
